src/Content/Projects/projects.css
#projectslist {
    text-align: justify;
    background-color: #535353;
}

#projectslist .light-background {
    background-color: #ffff;
}

#projectslist .dark-background {
    background-color: #535353;
    color: #ffff;
}

#projectslist .light2-background {
    position: relative;
    z-index: 1;
    background-color: #ecf0f5;
}

#projectslist .light2-background::before {
    content: "";
    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20viewBox%3D%220%200%201921%201081%22%3E%3Cdefs%3E%3Cstyle%3E.cls-1%2C.cls-2%7Bfill%3Anone%3B%7D.cls-2%7Bstroke%3A%2337474f%3Bstroke-linecap%3Around%3Bstroke-linejoin%3Around%3Bstroke-width%3A3.95px%3B%7D.cls-3%7Bstroke-miterlimit%3A10%3Bfill%3Aurl(%23apolleta_motivo)%3Bstroke%3Aurl(%23apolleta_motivo)%3B%7D%3C%2Fstyle%3E%3Cpattern%20id%3D%22apolleta_motivo%22%20data-name%3D%22apolleta_motivo%22%20width%3D%22300%22%20height%3D%22400%22%20patternUnits%3D%22userSpaceOnUse%22%20viewBox%3D%220%200%20300%20400%22%3E%3Crect%20class%3D%22cls-1%22%20width%3D%22300%22%20height%3D%22400%22%2F%3E%3Cpath%20class%3D%22cls-2%22%20d%3D%22M319.77%2C397a19.78%2C19.78%2C0%2C0%2C0-39.14-4%2C19.59%2C19.59%2C0%2C0%2C0%2C4.8%2C17.29%2C16.73%2C16.73%2C0%2C0%2C1%2C4.69%2C11.26v1.18h19.77v-1.17a16.84%2C16.84%2C0%2C0%2C1%2C4.73-11.32A19.49%2C19.49%2C0%2C0%2C0%2C319.77%2C397Z%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%22300%22%20y1%3D%22357.49%22%20x2%3D%22300%22%20y2%3D%22365.4%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%22274.64%22%20y1%3D%22366.56%22%20x2%3D%22280.23%22%20y2%3D%22372.15%22%2F%3E%3Cpath%20class%3D%22cls-2%22%20d%3D%22M19.77%2C397a19.8%2C19.8%2C0%2C0%2C0-24-19.32A19.73%2C19.73%2C0%2C0%2C0-19.37%2C393a19.59%2C19.59%2C0%2C0%2C0%2C4.8%2C17.29%2C16.73%2C16.73%2C0%2C0%2C1%2C4.69%2C11.26v1.18H9.89v-1.17a16.84%2C16.84%2C0%2C0%2C1%2C4.73-11.32A19.49%2C19.49%2C0%2C0%2C0%2C19.77%2C397Z%22%2F%3E%3Cline%20class%3D%22cls-2%22%20y1%3D%22357.49%22%20y2%3D%22365.4%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%2225.36%22%20y1%3D%22366.56%22%20x2%3D%2219.77%22%20y2%3D%22372.15%22%2F%3E%3Cpath%20class%3D%22cls-2%22%20d%3D%22M169.77%2C197a19.78%2C19.78%2C0%2C0%2C0-39.14-4%2C19.59%2C19.59%2C0%2C0%2C0%2C4.8%2C17.29%2C16.73%2C16.73%2C0%2C0%2C1%2C4.69%2C11.26v1.18h19.77v-1.17a16.84%2C16.84%2C0%2C0%2C1%2C4.73-11.32A19.49%2C19.49%2C0%2C0%2C0%2C169.77%2C197Z%22%2F%3E%3Cpath%20class%3D%22cls-2%22%20d%3D%22M142.62%2C222.74h14.77a2.5%2C2.5%2C0%2C0%2C1%2C2.5%2C2.5v17.27a0%2C0%2C0%2C0%2C1%2C0%2C0H140.12a0%2C0%2C0%2C0%2C1%2C0%2C0V225.24A2.5%2C2.5%2C0%2C0%2C1%2C142.62%2C222.74Z%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%22140.12%22%20y1%3D%22232.62%22%20x2%3D%22159.89%22%20y2%3D%22232.62%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%22150%22%20y1%3D%22157.49%22%20x2%3D%22150%22%20y2%3D%22165.4%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%22124.64%22%20y1%3D%22166.56%22%20x2%3D%22130.23%22%20y2%3D%22172.15%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%22175.36%22%20y1%3D%22166.56%22%20x2%3D%22169.77%22%20y2%3D%22172.15%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%22150%22%20y1%3D%22222.74%22%20x2%3D%22150%22%20y2%3D%22202.97%22%2F%3E%3Cpath%20class%3D%22cls-2%22%20d%3D%22M319.77-3a19.8%2C19.8%2C0%2C0%2C0-24-19.32A19.73%2C19.73%2C0%2C0%2C0%2C280.63-7a19.59%2C19.59%2C0%2C0%2C0%2C4.8%2C17.29%2C16.73%2C16.73%2C0%2C0%2C1%2C4.69%2C11.26v1.18h19.77V21.57a16.84%2C16.84%2C0%2C0%2C1%2C4.73-11.32A19.49%2C19.49%2C0%2C0%2C0%2C319.77-3Z%22%2F%3E%3Cpath%20class%3D%22cls-2%22%20d%3D%22M292.62%2C22.74h14.77a2.5%2C2.5%2C0%2C0%2C1%2C2.5%2C2.5V42.51a0%2C0%2C0%2C0%2C1%2C0%2C0H290.12a0%2C0%2C0%2C0%2C1%2C0%2C0V25.24a2.5%2C2.5%2C0%2C0%2C1%2C2.5-2.5Z%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%22290.12%22%20y1%3D%2232.62%22%20x2%3D%22309.89%22%20y2%3D%2232.62%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%22300%22%20y1%3D%2222.74%22%20x2%3D%22300%22%20y2%3D%222.97%22%2F%3E%3Cpath%20class%3D%22cls-2%22%20d%3D%22M19.77-3a19.8%2C19.8%2C0%2C0%2C0-24-19.32A19.73%2C19.73%2C0%2C0%2C0-19.37-7a19.59%2C19.59%2C0%2C0%2C0%2C4.8%2C17.29A16.73%2C16.73%2C0%2C0%2C1-9.88%2C21.56v1.18H9.89V21.57a16.84%2C16.84%2C0%2C0%2C1%2C4.73-11.32A19.49%2C19.49%2C0%2C0%2C0%2C19.77-3Z%22%2F%3E%3Cpath%20class%3D%22cls-2%22%20d%3D%22M-7.38%2C22.74H7.39a2.5%2C2.5%2C0%2C0%2C1%2C2.5%2C2.5V42.51a0%2C0%2C0%2C0%2C1%2C0%2C0H-9.88a0%2C0%2C0%2C0%2C1%2C0%2C0V25.24a2.5%2C2.5%2C0%2C0%2C1%2C2.5-2.5Z%22%2F%3E%3Cline%20class%3D%22cls-2%22%20x1%3D%22-9.88%22%20y1%3D%2232.62%22%20x2%3D%229.89%22%20y2%3D%2232.62%22%2F%3E%3Cline%20class%3D%22cls-2%22%20y1%3D%2222.74%22%20y2%3D%222.97%22%2F%3E%3C%2Fpattern%3E%3C%2Fdefs%3E%3Cg%20id%3D%22Layer_2%22%20data-name%3D%22Layer%202%22%3E%3Cg%20id%3D%22Capa_1%22%20data-name%3D%22Capa%201%22%3E%3Crect%20class%3D%22cls-3%22%20x%3D%220.5%22%20y%3D%220.5%22%20width%3D%221920%22%20height%3D%221080%22%2F%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E");
    background-position: center;
    background-size: cover;
    position: absolute;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    opacity: 0.08;
    width: 100%;
    height: 100%;
}

#projectslist ul {
    list-style: none;
    padding-left: 0;
}

#projectslist ul li {
    margin-top: 0.3em;
}

#projectslist ul strong {
    padding-right: 0.2em;
}

